feat: Rename project and add Veo motion synthesis
The project has been renamed from "Kitcha Brand Studio" to "Kynora Brand Studio" to reflect the new branding.

This commit also introduces Veo motion synthesis capabilities, allowing users to generate cinematic video animations from static images using AI. This expands the brand identity workshop's functionality beyond static assets.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kitcha-brand-studio",
+  "name": "kynora-brand-studio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
